# mc-parkou-rs

./: Cargo.toml  LICENSE.md  README.md
src/: alt_block.rs  block_box.rs  block_types.rs  bunch_of_blocks.rs  game_state.rs  line.rs  main.rs  parkour_gen_params.rs  utils.rs  weighted_vec.rs
src/generation/: block_collection.rs  block_grid.rs  custom_generation.rs  generation.rs  generator.rs  mod.rs  theme.rs
src/generation/generators/: blink_blocks.rs  cave.rs  complex_gen.rs  custom_generation.rs  indoor.rs  island.rs  mod.rs  snake.rs
src/prediction/: mod.rs  player_state.rs  prediction_state.rs
