[package]
name = "mc-parkou-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.9.0"
rand = "0.8.5"
valence = { git = "https://github.com/valence-rs/valence" }
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
